# DocLLM

./: LICENSE  README.md  pyproject.toml
scripts/document_tokenization/: LICENSE  document_tokenization.py
src/docllm/: pretraining_loss.py
src/docllm/data/: __init__.py  data_packing_pipe.py  precompute_epoch.py  precomputed_epoch_loader.py  pretrain_data_pipe.py  pretrain_data_pipeline.py  pretraining_data_config.py  pretraining_data_pipe.py  pretraining_pipeline.py  tensor_data_loader_pipe.py  tensor_data_loader_pipeline.py
src/docllm/llama/: attention.py  causal_docllm.py  config.py  decoder_layer.py  llama_docllm.py  pretrained_model.py
src/docllm/modules/: additional_tokens.py  part_freezable_embedding.py  part_freezable_linear.py  spatial_embedder.py
src/docllm/scripts/: convert_fsdp_to_hf.py  input_tokenization.py  json_to_pickle.py
test/: conftest.py  test_pretraining_loss.py  util.py
test/data/: conftest.py  test_data_packing_pipe.py  test_pretrain_data_pipe.py  test_pretrain_data_pipeline.py  test_pretraining_config.py  test_pretraining_data_config.py  test_pretraining_data_pipe.py  test_pretraining_pipeline.py  test_tensor_data_loader_pipe.py
test/llama/: conftest.py  helpers.py  test_attention.py  test_causal_docllm.py  test_decoder_layer.py  test_llama_docllm.py
test/modules/: additional_tokens_test_helpers.py  part_freezable_embedding_test_helpers.py  part_freezable_linear_test_helpers.py  test_additional_tokens.py  test_part_freezable_embedding.py  test_part_freezable_linear.py
test/scripts/: test_input_tokenization.py
(+47 files in other folders)
